--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 梁尧的博客
+title: Eleven的博客
 subtitle:
 description:
 keywords:
-author: 梁尧
-language: zh-Hans
+author: Eleven
+language: zh-CN
 timezone:
 
 # URL
